--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			<h1>Advanced CSS Trick 1 - Dark and Light Themes</h1>
 			<p>In the past, almost every website only offered one color theme, and you had no choice in the matter. However, in recent years dark themes have become increasingly popular and most major websites now offer their own version of one. The logic behind this is quite simple: white text on a dark background is much easier on the eyes than dark text on a white background (especially at night), and arguably looks much nicer as well. Only Safari currently offers native support for dark themes, allowing you to use them as a default whenever possible. However, Chrome and Firefox are not far behind, and will be offering support in their next releases. This webpage takes advantage of that functionality, and will change looks in the latest version of Safari depending on your default theme choice. </p>
 		</article>
-		<section class="blog-2">
+		<article class="blog-2">
 			<h1>Advanced CSS Trick 2 - object-fit and object-position</h1>
 			<p>Positioning videos used to be very messy and require lots of JavaScript, but these days it's very easy and can be done through two CSS properties: object-fit and object-position. The video I will be using to demonstrate this was shot by me last summer, at Glacier National Park in Montana. It shows firefighting planes scooping up tons of water from Lake McDonald, then flying over to a nearby wildfire and dropping their load before flying back for more.</p>
 			<p>First, you will see the unmodified video.</p>
@@ -161,7 +161,7 @@
 				<source src="planes.mp4" type="video/mp4">
 			</video>
 			<p>Here we are using the object-position property to center the video in the top its container. I used the "top" preset here, but you can put it in any position you want using exact X/Y coordinates or percentages.</p>
-		</section>
+		</article>
 	</main>
 	<!-- end of main content -->
 	<div class="back-to-top">
